Добавил начальный вариант своей визитки

--- a/index.html
+++ b/index.html
@@ -5,12 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Main Css -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Default Site Alex Alekseev Template</title>
 </head>
 <body>
     
+   <h1>
+       <div class="text">Alexander</div>
+       <div class="text">Alekseev</div>
+   </h1>
+   <div class="about">
+       <h2 class="big">
+           Frontend<br>
+           Developer
+        </h2>
+       <section class="history">
+           <h2 class="section-title">About Me</h2>
+           <p>
+                Hello I'm Alex.<br>
+                I'm a beginner Frontend developer. I created this site to share my progress and to meet new interesting people. I'm open for cooperation and in search of new interesting projects.
+           </p>
+       </section>
+       <section class="skills">
+           <h2 class="section-title">My skills</h2>
+           <ul class="skills-tree">
+               <li>Html</li>
+               <li>Css</li>
+               <li>Js</li>
+               <li>Sass/Less</li>
+               <li>Bootstrap</li>
+           </ul>
+       </section>
+       <section class="work">
+           <h2 class="section-title">My works</h2>
+           <ul class="work-tree">
+               <li><a href="#">One</a></li>
+               <li><a href="#">Two</a></li>
+               <li><a href="#">Three</a></li>
+               <li><a href="#">Four</a></li>
+           </ul>
+       </section>
+       <section class="contacts">
+           <h2 class="section-title">Contacts</h2>
+           <p>If you are interested in cooperation or just want to chat, you can find me in:</p>
+           <ul class="contacts-links">
+                <li class="contacts-links__li"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="contacts-links__li"><a href="#"><i class="fab fa-vk"></i></a></li>
+                <li class="contacts-links__li"><a href="#"><i class="fas fa-at"></i></a></li>
+           </ul>
+       </section>
+   </div>
 
-    <script src="/js/main.js"></script>
 </body>
 </html>
