подправил последовательность css изменил отображение ссылок на работы

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="text/html; charset=utf-8" hhtp-equiv="Content-Type">
+    <!-- Description -->
+    <meta name="author" content="Alexander Alekseev">
+    <meta name="description" content="Alexander Alekseev is a beginner frontend developer who looking for cooperation and interesting projects.">
+    <meta name="keywords" content="alexander, alekseev, alex, alexeev, alexander alekseev, frontend, portfolio, experience, freelance, skills, works">
+    <meta name="Resource-type" content="Document">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Main Css -->
     <link rel="stylesheet" href="css/main.css">
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <title>Default Site Alex Alekseev Template</title>
+    <title>Alexander Alekseev - Frontend Developer</title>
 </head>
 <body>
     
@@ -22,8 +28,8 @@
    </h1>
    <div class="about">
        <h2 class="big">
-           <div>Frontend</div> 
-           <div>Developer</div>
+           <div class="animate2">Frontend</div> 
+           <div class="animate2">Developer</div>
         </h2>
        <section class="history">
            <h2 class="section-title">About Me</h2>
